<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="LiteraryBrown_name">Ochikuri</string>
    <string name="LiteraryCyan_name">Sabiseiji</string>
    <string name="LiteraryGreen_name">Yanagisusutake Cya</string>
    <string name="LiteraryPink_name">Sekichiku</string>
    <string name="LiteraryPurple_name">Hatoba Murasaki</string>
    <string name="LiteraryRed_name">Suoh</string>
    <string name="LiteraryWhite_name">Ensyu Nezumi</string>
    <string name="LiteraryYellow_name">Karekusak</string>
    <string name="about_item_text">About</string>
    <string name="about_ui_share">Share</string>
    <string name="activity_not_found">App Not Installed</string>
    <string name="activity_title_back">Back</string>
    <string name="activity_title_confirm">Confirm</string>
    <string name="app_name">SmartisanOS</string>
    <string name="app_name_app_store">Market</string>
    <string name="app_name_bbs">BBS</string>
    <string name="app_name_calendar">Calendar</string>
    <string name="app_name_game_center">Game Center</string>
    <string name="app_name_mms">Messages</string>
    <string name="app_name_notes">NOTE</string>
    <string name="app_name_phone">Phone</string>
    <string name="app_name_quicksearchbox">Search</string>
    <string name="app_name_reader">Reader</string>
    <string name="app_name_smile_cloud">Smiling Cloud</string>
    <string name="app_name_weather">Weather</string>
    <string name="at_most">Select No More Than %1$s Apps</string>
    <string name="atleast_one_visible">At least one desktop should remain visible</string>
    <string name="can_not_download_theme_by_net">Download failed, Please connect to the network environment</string>
    <string name="cancel">Cancel</string>
    <string name="category_language">en</string>
    <string name="category_other">Miscellaneous</string>
    <string name="confirm_download_app_msg">Do you want to download Smartisan APP \"%s\" ?</string>
    <string name="confirm_sort_by_category_dialog_title_1">Preview: Sort by App Type</string>
    <string name="confirm_sort_by_color_dialog_title">Sort by Color</string>
    <string name="confirm_sort_by_color_dialog_title_1">Preview: Sort by Color</string>
    <string name="confirm_sort_by_install_dialog_title">Sort by Time</string>
    <string name="confirm_sort_by_install_dialog_title_1">Preview: Sort by Time Installed</string>
    <string name="confirm_sort_by_usage_dialog_title">Sort by Frequency</string>
    <string name="confirm_sort_by_usage_dialog_title_1">Preview: Sort by Frequency</string>
    <string name="current_theme_tag">Current</string>
    <string name="current_use">Current</string>
    <string name="default_icon_text">Default Icons</string>
    <string name="delete_area_text">Uninstallation</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="dlg_msg_download_theme_local_only">Currently there are only 1 theme, whether to download other themes?</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_switch_launcher_msg">The Home Screen will need to reload after the change.</string>
    <string name="dlg_switch_launcher_msg_9_grids">When you change the Home Screen from 20 grids to 12 grids, all pages with more than 12 icons (including the hidden page) will be automatically sorted into 2 pages. The Home Screen will need to reload after the change.</string>
    <string name="dlg_switch_launcher_title">Setting Home Screen</string>
    <string name="download_embedded_app_downlading">%s Downloading</string>
    <string name="download_embedded_app_failed">Download %s Failed</string>
    <string name="download_with_cellular_continue">Continue</string>
    <string name="empty_password">Empty Password</string>
    <string name="enable_cellular_label">Enable Cellular</string>
    <string name="enable_cellular_tips">When Wi-Fi is unavailable, you need a mobile data connection to download Launcher themes or change icons and preset apps.</string>
    <string name="engine_title_baidu">Baidu</string>
    <string name="engine_title_bing">Bing</string>
    <string name="engine_title_google">Google</string>
    <string name="engine_title_sm">Shenma</string>
    <string name="enter_page_title">Enter Title</string>
    <string name="enter_password">Enter password to access protected apps</string>
    <string name="eyelock_notice">Hidden</string>
    <string name="flip_anim_cut_card">Screen Slide</string>
    <string name="flip_anim_default">Default</string>
    <string name="flip_anim_gather">Aggregation</string>
    <string name="flip_anim_grid_flip">Block Flip</string>
    <string name="flip_anim_lattice_flip">Grid Flip</string>
    <string name="flip_anim_lattice_stretch">Grid Stretch</string>
    <string name="flip_anim_shutter">Window Shades</string>
    <string name="flip_anim_subtitle">Pick an animation</string>
    <string name="flip_anim_title">Page Animations</string>
    <string name="follow_dialog_coyp_text">Copy</string>
    <string name="follow_dialog_coyp_toast_text">Text Copied</string>
    <string name="follow_dialog_weibo_title_text">Copy the Weibo account name</string>
    <string name="follow_dialog_weixin_title_text">Copy the Wechat account name</string>
    <string name="follow_website_title">Official Website</string>
    <string name="follow_weibo_content">锤子科技</string>
    <string name="follow_weibo_title">Weibo</string>
    <string name="follow_weixin_title">编译作者</string>
    <string name="forget_password">Forget</string>
    <string name="global_search">System-wide Search</string>
    <string name="has_selected_1_app_float">%1$s App Selected</string>
    <string name="has_selected_app_float">%1$s Apps Selected</string>
    <string name="hdd_dialog_body">Sorry, Smartisan Launcher currently supports only part of the resolution of 720P and more than 1GB memory phones,in order to ensure the smooth running effects and a good user experience of it.</string>
    <string name="hdd_dialog_title">Warning</string>
    <string name="hdd_dialog_uninstall_btn">OK</string>
    <string name="icon_setting_empty_tip">No Replaceable Icons</string>
    <string name="icon_setting_sub_text">"Choose well-designed icons to replace apps' default icons"</string>
    <string name="icon_setting_text">Application Icons</string>
    <string name="improved_icon_text">Improved Icons</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="initializing">Initializing</string>
    <string name="insufficient_space">Insufficient Space</string>
    <string name="launcher_check_update_message">A newer version of the Smartisan Launcher (version V%s) has been detected.</string>
    <string name="launcher_fast_launch_tips_36">Start an application by tapping the icon under multiple screen view.</string>
    <string name="launcher_fast_launch_tips_64">Start an application by tapping the icon under multiple screen view.</string>
    <string name="launcher_fast_launch_tips_81">Start an application by tapping the icon under multiple screen view.</string>
    <string name="launcher_flip_animation">Launcher Flip Animation</string>
    <string name="launcher_mode_summary">Home Screen</string>
    <string name="launcher_multi_block_mode_summary">Multiple Screen View</string>
    <string name="launcher_multi_block_mode_tips_36">Click the menu button or pinch in the home screen to bring up multiple screen view.</string>
    <string name="launcher_multi_block_mode_tips_81">Click the menu button or pinch in the home screen to bring up multiple screen view.</string>
    <string name="launcher_setting">Launcher Settings</string>
    <string name="launcher_setting_name">Launcher Settings</string>
    <string name="launcher_settings_options">Launcher Settings</string>
    <string name="launcher_settings_title">Launcher Settings</string>
    <string name="launcher_theme_sub_text">Set Launcher Theme</string>
    <string name="launcher_theme_text">Launcher Theme</string>
    <string name="launcher_unlock_anim">Launcher Unlock Animation</string>
    <string name="launcher_wallpaper_setting_sub_text">Only works with Aero and Mist themes</string>
    <string name="launcher_wallpaper_setting_text">Launcher Wallpaper</string>
    <string name="launcher_wallpaper_pick_failed_text">Unable to set launcher wallpaper</string>
    <string name="launcher_wallpaper_pick_text">Choose image</string>
    <string name="launcher_wallpaper_picker_unavailable_text">No image picker available</string>
    <string name="launcher_wallpaper_restore_default_text">Restore default wallpaper</string>
    <string name="mode_smartisan_launcher_16_grids">20-Grid</string>
    <string name="mode_smartisan_launcher_9_grids">12-Grid</string>
    <string name="multi_block_fast_launch_app">Fast Launch</string>
    <string name="setting_engine_set">Default Search</string>
    <string name="setting_user_experience_des_txt">Once enabled, anonymous information will be collected to improve the user experience of Smartisan OS. None of your personal information will be included.</string>
    <string name="setting_user_experience_txt">UX Improvement Program</string>
    <string name="title_activity_setting">Settings</string>
    <string name="title_installed_themes">Local Themes</string>
    <string name="title_uninstalled_themes">Online Themes</string>
    <string name="wall_paper_header_title">Themes, Wallpapers, Icons</string>
    <string name="user_plan_dialog_agree_check">Agree</string>
    <string name="test_anim_time">动画时间T（毫秒）</string>
    <string name="test_anim_time_description">（动画时间为角标的像素长度乘以该系数加上100豪秒）</string>
    <string name="test_gen">生成角标</string>
    <string name="test_gravity">重力X,Y（像素/秒）</string>
    <string name="test_gravity_description">（在某方向上重力越大粒子速度衰减越快）</string>
    <string name="test_high">H</string>
    <string name="test_life">生命L,H（毫秒）</string>
    <string name="test_life_description">（粒子的生命在最小值L和最大值H之间随机产生）</string>
    <string name="test_low">L</string>
    <string name="test_num">N</string>
    <string name="test_particle_num">粒子数量（个/帧）</string>
    <string name="test_particle_num_description">（设置每一帧产生的粒子数量）</string>
    <string name="test_reset">复位</string>
    <string name="test_span">I</string>
    <string name="test_time">T</string>
    <string name="test_try">试试效果</string>
    <string name="test_velocity">速度X,Y(像素/秒)以及方向影响值I</string>
    <string name="test_velocity_description">（方向影响值I为0.1时，粒子喷射角度大概为360*0.1度）</string>
    <string name="test_x">X</string>
    <string name="test_y">Y</string>
</resources>