<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/relativelayout_title" android:background="@drawable/launcher_title_bar_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textSize="@dimen/more_text_size_135" android:textColor="@color/launcher_title_bar_button_text_colorlist" android:ellipsize="end" android:id="@id/setting_titlebar_back" android:background="@drawable/selector_title_button_back" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="3.0dp" android:maxWidth="@dimen/title_back_btn_max_width" android:minWidth="@dimen/button_min_width" android:text="@string/activity_title_back" android:singleLine="true" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/more_title_txt_size" android:textColor="@color/launcher_title_bar_button_text_colorlist" android:gravity="center" android:id="@id/setting_titlebar_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_activity_setting" android:layout_centerInParent="true" />
        <Button android:textSize="@dimen/more_text_size_135" android:textColor="@color/more_text_white_color" android:ellipsize="end" android:id="@id/setting_titlebar_confirm" android:background="@drawable/setting_title_confirm" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/button_min_width" android:text="@string/activity_title_confirm" android:singleLine="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ImageView android:background="@drawable/setting_titlebar_shadow" android:layout_width="match_parent" android:layout_height="wrap_content" />
</LinearLayout>
