<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:setting="http://schemas.android.com/apk/res-auto">
    <com.smartisanos.home.widget.sys.Title android:id="@id/view_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" setting:title_titlex="@string/setting_engine_set" />
    <include android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/view_title" layout="@layout/title_bar_shadow" />
    <RelativeLayout android:id="@id/engine_baidu" android:background="@drawable/setting_item_up" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/item_block_gap">
        <ImageView android:id="@id/engine_baidu_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_icon_left_margin" android:src="@drawable/engine_setting_baidu" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/setting_item_text_size" android:textColor="@drawable/more_item_color_bg" android:paddingLeft="@dimen/more_info_items_content_padding_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/engine_title_baidu" android:layout_toRightOf="@id/engine_baidu_icon" android:layout_centerVertical="true" />
        <ImageView android:id="@id/engine_baidu_select" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/engineselect_right_margin" android:src="@drawable/selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/engine_google" android:background="@drawable/more_item_middle" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/engine_google_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_icon_left_margin" android:src="@drawable/engine_setting_google" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/setting_item_text_size" android:textColor="@drawable/more_item_color_bg" android:paddingLeft="@dimen/more_info_items_content_padding_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/engine_title_google" android:layout_toRightOf="@id/engine_google_icon" android:layout_centerVertical="true" />
        <ImageView android:id="@id/engine_google_select" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/engineselect_right_margin" android:src="@drawable/selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/engine_bing" android:background="@drawable/more_item_middle" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/engine_bing_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_icon_left_margin" android:src="@drawable/engine_setting_bing" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/setting_item_text_size" android:textColor="@drawable/more_item_color_bg" android:paddingLeft="@dimen/more_info_items_content_padding_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/engine_title_bing" android:layout_toRightOf="@id/engine_bing_icon" android:layout_centerVertical="true" />
        <ImageView android:id="@id/engine_bing_select" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/engineselect_right_margin" android:src="@drawable/selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/engine_sm" android:background="@drawable/setting_item_down" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/engine_sm_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_icon_left_margin" android:src="@drawable/engine_setting_shenma" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/setting_item_text_size" android:textColor="@drawable/more_item_color_bg" android:paddingLeft="@dimen/more_info_items_content_padding_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/engine_title_sm" android:layout_toRightOf="@id/engine_sm_icon" android:layout_centerVertical="true" />
        <ImageView android:id="@id/engine_sm_select" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/engineselect_right_margin" android:src="@drawable/selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>
